# python-module-jk-json

./: .gitignore  HISTORY.md  README.md  packageinfo.json  packageinfo.jsonc
documentation/: TOC.md  TODO.md
documentation/1 general/: 1 Introduction.md
documentation/2 usage/: 1 Parsing of JSON data.md  3 Serializing JSON data.md  4 Building Schemas with the Simple Schema Generator.md  5 Verifying JSON data with JSON Schemas.md
documentation/3 additional/: 1 Current State of Development.md  2 Performance.md  3 JSON Grammar.md  Parsing.md  Schema.md
examples/: demo-pretty-printing.py  stats-parsing.prof  stats-tokenizing.prof  test-json.py  test-performance-test.json  test-performance.py  test-relaxed.json  test-strict.json
src/: MANIFEST.in  README.md  README.rst  TODO.md  pyproject.toml  setup.py
src/jk_json/: JsonParserRelaxed.py  JsonParserStrict.py  ObjectEncoder.py  ParserBase.py  ParserErrorException.py  SourceCodeLocation.py  Token.py  TokenStream.py  Tokenizer.md  TokenizerBase.py  TokenizerRelaxed.py  TokenizerStrict.py  __init__.py
src/jk_json/tools/: __init__.py  tools.py
src/jk_jsonschema/: SchemaParser.py  SimpleSchemaGenerator.py  _SchemaAST.py  __init__.py  re.py  schema_validator.py
src/jk_jsonschema/OLD/: SchemaItem.py  schema_validators_OLD.py
testing/: clone-test-suite.sh  json-example.json  parse-test-case-schemas.py  test-implementation-relaxed.py  test-implementation-strict.py  test-json-cmp.py  test-json-verification.py  test-schema-validation.py  test-simple-schema-generator.py  test-unicode.py
(+6 files in other folders)
